[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/_debug/GeneratePuzzle.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/levels/puzzle_manager.tscn" type="PackedScene" id=2]

[node name="GeneratePuzzles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GeneratePuzzle" type="Button" parent="Panel"]
margin_left = 135.0
margin_top = 8.0
margin_right = 252.0
margin_bottom = 31.0
text = "Generate puzzle"
script = ExtResource( 1 )

[node name="ApplicantLabel" type="Label" parent="Panel"]
margin_left = 24.0
margin_top = 15.0
margin_right = 135.0
margin_bottom = 29.0
text = "APPLICANT INFO"

[node name="Panel" type="Panel" parent="Panel"]
margin_left = 24.0
margin_top = 37.0
margin_right = 324.0
margin_bottom = 131.0
__meta__ = {
"_edit_group_": true
}

[node name="AppNameLineEdit" type="LineEdit" parent="Panel/Panel"]
margin_left = 108.0
margin_right = 281.0
margin_bottom = 27.0

[node name="AppNameLabel" type="Label" parent="Panel/Panel"]
margin_right = 40.0
margin_bottom = 14.0
text = "Applicant name"

[node name="ImageLineEdit" type="LineEdit" parent="Panel/Panel"]
margin_left = 108.0
margin_top = 29.0
margin_right = 281.0
margin_bottom = 56.0

[node name="ImageLabel" type="Label" parent="Panel/Panel"]
margin_left = 1.0
margin_top = 35.0
margin_right = 101.0
margin_bottom = 49.0
text = "Applicant image"

[node name="ValidationSolutionLabel" type="Label" parent="Panel/Panel"]
margin_left = 2.0
margin_top = 68.0
margin_right = 121.0
margin_bottom = 82.0
text = "Validation solution"

[node name="ValSolOptionButton" type="OptionButton" parent="Panel/Panel"]
anchor_right = 0.186
anchor_bottom = 0.144
margin_left = 127.0
margin_top = 63.0
margin_right = 228.664
margin_bottom = 32.6

[node name="JobOfferPanel" type="Panel" parent="."]
margin_left = 21.0
margin_top = 131.0
margin_right = 503.0
margin_bottom = 548.0
__meta__ = {
"_edit_group_": true
}

[node name="JobOfferLabel" type="Label" parent="JobOfferPanel"]
margin_top = -5.0
margin_right = 207.0
margin_bottom = 9.0
text = "JOB OFFER INFO"

[node name="WorkTypeLabel" type="Label" parent="JobOfferPanel"]
margin_left = 2.0
margin_top = 26.0
margin_right = 102.0
margin_bottom = 40.0
text = "Work Type"

[node name="WorkTypeOptionMenu" type="OptionButton" parent="JobOfferPanel"]
margin_left = 85.0
margin_top = 22.0
margin_right = 243.0
margin_bottom = 42.0

[node name="DificultyLabel" type="Label" parent="JobOfferPanel"]
margin_left = 2.0
margin_top = 50.0
margin_right = 102.0
margin_bottom = 64.0
text = "Difficulty"

[node name="DifficultyOpMenu" type="OptionButton" parent="JobOfferPanel"]
margin_left = 85.0
margin_top = 46.0
margin_right = 243.0
margin_bottom = 66.0

[node name="LevelLabel" type="Label" parent="JobOfferPanel"]
margin_left = 1.0
margin_top = 74.0
margin_right = 101.0
margin_bottom = 88.0
text = "Level"

[node name="LevelOpMenu" type="OptionButton" parent="JobOfferPanel"]
margin_left = 84.0
margin_top = 70.0
margin_right = 242.0
margin_bottom = 90.0

[node name="TimeLimitLabel" type="Label" parent="JobOfferPanel"]
margin_top = 94.0
margin_right = 100.0
margin_bottom = 108.0
text = "Time Limit"

[node name="TimeLimitLineEdit" type="LineEdit" parent="JobOfferPanel"]
margin_left = 83.0
margin_top = 96.0
margin_right = 239.0
margin_bottom = 123.0

[node name="ReqAnswerLabel" type="Label" parent="JobOfferPanel"]
margin_left = 6.0
margin_top = 134.0
margin_right = 235.0
margin_bottom = 157.0
text = "Requisite: question + answer"
autowrap = true

[node name="ReqAnswerLineEdit" type="LineEdit" parent="JobOfferPanel"]
margin_left = -3.0
margin_top = 152.0
margin_right = 468.0
margin_bottom = 179.0

[node name="ReqAnswerLineEdit2" type="LineEdit" parent="JobOfferPanel"]
margin_left = -3.0
margin_top = 179.0
margin_right = 468.0
margin_bottom = 206.0

[node name="ReqAnswerLineEdit3" type="LineEdit" parent="JobOfferPanel"]
margin_left = -4.0
margin_top = 206.0
margin_right = 467.0
margin_bottom = 233.0

[node name="ReqAnswerLineEdit4" type="LineEdit" parent="JobOfferPanel"]
margin_left = -4.0
margin_top = 233.0
margin_right = 467.0
margin_bottom = 260.0

[node name="ReqAnswerLineEdit5" type="LineEdit" parent="JobOfferPanel"]
margin_left = -3.0
margin_top = 260.0
margin_right = 468.0
margin_bottom = 287.0

[node name="CrossQuestionsLabel" type="Label" parent="JobOfferPanel"]
margin_left = 2.0
margin_top = 290.0
margin_right = 367.0
margin_bottom = 325.0
text = "Cross question:
requisite1|requisite2: question1 +  answer2"
autowrap = true

[node name="CrossQuestionsLineEdit" type="LineEdit" parent="JobOfferPanel"]
margin_left = -3.0
margin_top = 325.0
margin_right = 468.0
margin_bottom = 352.0

[node name="SalaryOfferLabel" type="Label" parent="JobOfferPanel"]
margin_left = -1.0
margin_top = 361.0
margin_right = 93.0
margin_bottom = 384.0
text = "Salary Offer"
autowrap = true

[node name="SalaryOfferLineEdit" type="LineEdit" parent="JobOfferPanel"]
margin_left = 116.0
margin_top = 352.0
margin_right = 276.0
margin_bottom = 379.0

[node name="SpecialConditionLabel" type="Label" parent="JobOfferPanel"]
margin_top = 384.0
margin_right = 116.0
margin_bottom = 405.0
text = "Special condition"
autowrap = true

[node name="SpecialConditionLineEdit" type="LineEdit" parent="JobOfferPanel"]
margin_left = 116.0
margin_top = 379.0
margin_right = 276.0
margin_bottom = 406.0

[node name="PuzzleManager" parent="." instance=ExtResource( 2 )]

[node name="CurriculumPanel" type="Panel" parent="."]
margin_left = 507.0
margin_top = 135.0
margin_right = 1000.0
margin_bottom = 580.0

[node name="CurriculumLabel" type="Label" parent="CurriculumPanel"]
margin_right = 40.0
margin_bottom = 14.0
text = "CURRICULUM INFO"

[node name="MinSalaryLabel" type="Label" parent="CurriculumPanel"]
margin_top = 99.0
margin_right = 94.0
margin_bottom = 122.0
text = "Salary Offer"
autowrap = true

[node name="MinSalaryLineEdit" type="LineEdit" parent="CurriculumPanel"]
margin_left = 84.0
margin_top = 92.0
margin_right = 244.0
margin_bottom = 119.0

[node name="SkillnswerLabel" type="Label" parent="CurriculumPanel"]
margin_left = 11.0
margin_top = 136.0
margin_right = 240.0
margin_bottom = 159.0
text = "Requisite: question + answer"
autowrap = true

[node name="SkillAnswerLineEdit" type="LineEdit" parent="CurriculumPanel"]
margin_left = 2.0
margin_top = 154.0
margin_right = 473.0
margin_bottom = 181.0

[node name="SkillAnswerLineEdit2" type="LineEdit" parent="CurriculumPanel"]
margin_left = 2.0
margin_top = 181.0
margin_right = 473.0
margin_bottom = 208.0

[node name="SkillAnswerLineEdit3" type="LineEdit" parent="CurriculumPanel"]
margin_left = 1.0
margin_top = 208.0
margin_right = 472.0
margin_bottom = 235.0

[node name="SkillAnswerLineEdit4" type="LineEdit" parent="CurriculumPanel"]
margin_left = 1.0
margin_top = 235.0
margin_right = 472.0
margin_bottom = 262.0

[node name="SkillAnswerLineEdit5" type="LineEdit" parent="CurriculumPanel"]
margin_left = 2.0
margin_top = 262.0
margin_right = 473.0
margin_bottom = 289.0

[node name="TimelineJobLabel" type="Label" parent="CurriculumPanel"]
margin_left = 8.0
margin_top = 296.0
margin_right = 237.0
margin_bottom = 319.0
text = "job + from date to date"
autowrap = true

[node name="TimelineJobLineEdit" type="LineEdit" parent="CurriculumPanel"]
margin_left = -1.0
margin_top = 314.0
margin_right = 470.0
margin_bottom = 341.0

[node name="TimelineJobLineEdit2" type="LineEdit" parent="CurriculumPanel"]
margin_left = -1.0
margin_top = 341.0
margin_right = 470.0
margin_bottom = 368.0

[node name="TimelineJobLineEdit3" type="LineEdit" parent="CurriculumPanel"]
margin_left = -2.0
margin_top = 368.0
margin_right = 469.0
margin_bottom = 395.0

[node name="TimelineJobLineEdit4" type="LineEdit" parent="CurriculumPanel"]
margin_left = -2.0
margin_top = 395.0
margin_right = 469.0
margin_bottom = 422.0

[node name="TimelineJobLineEdit5" type="LineEdit" parent="CurriculumPanel"]
margin_left = -1.0
margin_top = 422.0
margin_right = 470.0
margin_bottom = 449.0

[connection signal="gui_input" from="Panel/GeneratePuzzle" to="Panel/GeneratePuzzle" method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="Panel/GeneratePuzzle" to="Panel/GeneratePuzzle" method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/GeneratePuzzle" to="Panel/GeneratePuzzle" method="_on_Button_mouse_exited"]
